<resources>
    <string name="app_name">MobileCheckDevice</string>
    <string name="cleanup">Cleanup</string>
    <string name="laundry">Laundry</string>
    <string name="dnd">DND</string>
    <string name="checkout">Checkout</string>
    <string name="roomService">RoomService</string>
    <string name="template">Templates</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="templates">Templates</string>
    <string name="addTemplate">add Template</string>
    <string name="applyTemplateOnRoom">Apply Template On Room</string>
    <string name="addMood">Add Mood</string>
    <string name="addMultiControl">Add MultiControl</string>
    <string name="roomsAddedToTemplate">Rooms Added To Template</string>
    <string name="moods">Moods</string>
    <string name="multiControls">Multi Controls</string>
    <string name="addRooms">Add Rooms</string>
    <string name="addedRooms">Added Rooms</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="selectProject">Select Project</string>
    <string name="loading">Loading ..</string>
    <string name="login">Login</string>
    <string name="powerOn">Power On</string>
    <string name="powerCard">Power Card</string>
    <string name="powerOff">Power Off</string>
    <string name="edit">Edit</string>
    <string name="buildings">Buildings</string>
    <string name="addBuilding">Add Building</string>
    <string name="floors">Floors</string>
    <string name="addFloor">Add Floor</string>
    <string name="addRoom">Add Room</string>
    <string name="suites">Suites</string>


    <!--    Messages -->

    <string name="physicalButtonMessage">please turn on this switch to select condition button</string>

    <string name="selectButtons">Select Buttons</string>
    <string name="pleaseSelectButtons">please select buttons</string>

    <string name="selectOtherButtons">Select Other Buttons</string>
    <string name="pleaseSelectOtherButtonsInMultiControl">please select other buttons in multi control</string>
</resources>